fix: select field z-index (#126)

--- a/src/components/forms/SelectField/select-field.module.scss
+++ b/src/components/forms/SelectField/select-field.module.scss
@@ -6,6 +6,7 @@
   position: relative;
   &__options {
     display: none;
+    z-index: 2;
     &-fallback {
       text-align: center;
       padding: $spacing-lg;
